--- a/src/features/Todo/components/TodoItem/TodoItem.module.css
+++ b/src/features/Todo/components/TodoItem/TodoItem.module.css
@@ -1,5 +1,8 @@
 .todo-item {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
     background-color: var(--BG_LIGHT);
     padding: 1rem;
-    border: 1px solid var(--BORDER_COLOR_MEDIUM);
+    border: 2px solid var(--BORDER_COLOR_MEDIUM);
 }
