Drafting add todo item and state.

--- a/src/features/Todo/components/TodoItem/TodoItem.module.css
+++ b/src/features/Todo/components/TodoItem/TodoItem.module.css
@@ -4,5 +4,5 @@
     gap: 0.5rem;
     background-color: var(--BG_LIGHT);
     padding: 1rem;
-    border: 2px solid var(--BORDER_COLOR_MEDIUM);
+    border: var(--BORDER_MEDIUM);
 }
