--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,8 @@
     --BUTTON_COLOR_OK: #005F8F;
     --BORDER_COLOR_MEDIUM: #005F8F;
 
-    --FONT_PRIMARY: "Courier Prime", monospace;;
+    --FONT_PRIMARY: "Courier Prime", monospace;
+    --BORDER_MEDIUM: 1px solid var(--BORDER_COLOR_MEDIUM);
 }
 
 * {
