Implementing first draft for removing a todo item.

--- a/src/features/Todo/components/TodoForm/TodoForm.module.css
+++ b/src/features/Todo/components/TodoForm/TodoForm.module.css
@@ -4,6 +4,10 @@
     gap: 1rem;
 }
 
+.todo-form:invalid > button {
+    cursor: not-allowed;
+}
+
 .input-ctr {
     display: flex;
     flex-direction: column;
