--- a/src/features/Todo/components/TodoItem/TodoItem.module.css
+++ b/src/features/Todo/components/TodoItem/TodoItem.module.css
@@ -8,7 +8,7 @@
     padding: 1rem;
     border: var(--BORDER_MEDIUM);
     width: 100%;
-    height: 100px;
+    height: 120px;
 }
 
 .todo-item-body {
@@ -19,8 +19,7 @@
     word-wrap: break-word;
 }
 
-.check-box-ctr,
-.trash-ctr {
+.check-box-btn {
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -28,20 +27,35 @@
     cursor: pointer;
 }
 
-.check-box-ctr {
+.check-box-btn {
     background-color: var(--BG_LIGHT_X);
     border: var(--BORDER_MEDIUM_FAT);
+    padding: 4px;
 }
 
-.check-box-ctr:hover {
+.check-box-btn:hover {
     border: var(--BORDER_DARK_FAT);
 }
 
-.trash-ctr {
-    padding: 0.5rem;
+.update-todo-ctr {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
-.trash-ctr:hover {
+.select-icon-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 50%;
+    padding: 0.5rem;
+    background-color: var(--BG_LIGHT);
+    border: none;
+}
+
+.select-icon-btn:hover {
     background-color: var(--BG_DARK);
 }
 
