--- a/src/features/Todo/components/TodoItem/TodoItem.module.css
+++ b/src/features/Todo/components/TodoItem/TodoItem.module.css
@@ -8,15 +8,25 @@
     padding: 1rem;
     border: var(--BORDER_MEDIUM);
     width: 100%;
-    height: 120px;
+    min-height: 120px;
+    cursor: pointer;
+}
+
+.todo-item:hover {
+    background-color: var(--BG_MEDIUM);
 }
 
 .todo-item-body {
-    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     flex-grow: 1;
-    overflow-y: auto;
     overflow-x: hidden;
     word-wrap: break-word;
+}
+
+.todo-item-body > time {
+    font-size: 0.8rem;
 }
 
 .check-box-btn {
@@ -51,8 +61,8 @@
     cursor: pointer;
     border-radius: 50%;
     padding: 0.5rem;
-    background-color: var(--BG_LIGHT);
     border: none;
+    background-color: transparent;
 }
 
 .select-icon-btn:hover {
@@ -61,4 +71,8 @@
 
 .hide {
     visibility: hidden;
+}
+
+.none {
+    display: none;
 }
