--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
     --BG_LIGHT: #265973; 
     --BG_LIGHT_X: #CCFFFF; 
     --FONT_COLOR_LIGHT: #CCFFFF;
+    --FONT_COLOR_MEDIUM: #005F8F;
     --BUTTON_COLOR_OK: #005F8F;
     --BORDER_COLOR_MEDIUM: #005F8F;
     --BORDER_COLOR_DARK: #001F3D;
