--- a/src/layout/BaseLayout/BaseLayout.module.css
+++ b/src/layout/BaseLayout/BaseLayout.module.css
@@ -5,7 +5,8 @@
     align-items: center;
     width: 100%;
     background-color: black;
-    padding: 1rem; 
+    padding-block: 1rem;
+    padding-inline: 2rem; 
 }
 
 .nav {
