--- a/src/features/Todo/components/About/About.module.css
+++ b/src/features/Todo/components/About/About.module.css
@@ -1,3 +1,9 @@
+.aboutSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .about-status-list {
     margin-left: 2rem;
     color: black;
