--- a/src/features/Todo/components/TodoItem/TodoItem.module.css
+++ b/src/features/Todo/components/TodoItem/TodoItem.module.css
@@ -3,11 +3,11 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
     background-color: var(--BG_LIGHT);
-    padding: 1rem;
     border: var(--BORDER_MEDIUM);
     width: 100%;
+    padding: 0.5rem;
     min-height: 120px;
     cursor: pointer;
 }
@@ -23,6 +23,7 @@
     flex-grow: 1;
     overflow-x: hidden;
     word-wrap: break-word;
+    padding-inline: 8px;
 }
 
 .check-box-btn {
@@ -47,6 +48,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 1rem;
     height: 100%;
 }
 
