--- a/src/features/Todo/components/TodoForm/TodoForm.module.css
+++ b/src/features/Todo/components/TodoForm/TodoForm.module.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-block: 2rem;
+    width: 100%;
 }
 
 .todo-form:invalid > button {
@@ -15,11 +17,9 @@
 
 .input-ctr > input,
 .input-ctr > textarea {
-    padding: 1rem;
     color: var(--FONT_COLOR_LIGHT);
     background-color: var(--BG_DARK_X);
     border: var(--BORDER_MEDIUM);
-    
 }
 
 .input-ctr > input::placeholder,
