--- a/src/features/Todo/components/TodoItem/TodoItem.module.css
+++ b/src/features/Todo/components/TodoItem/TodoItem.module.css
@@ -1,4 +1,5 @@
 .todo-item {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -7,9 +8,16 @@
     background-color: var(--BG_LIGHT);
     border: var(--BORDER_MEDIUM);
     width: 100%;
-    padding: 0.5rem;
     min-height: 120px;
     cursor: pointer;
+    padding: 0.5rem;
+}
+
+.close-edit-mode-ctr {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0.5rem;
 }
 
 .todo-item:hover {
@@ -23,7 +31,6 @@
     flex-grow: 1;
     overflow-x: hidden;
     word-wrap: break-word;
-    padding-inline: 8px;
 }
 
 .check-box-btn {
