--- a/src/layout/BaseLayout/BaseLayout.module.css
+++ b/src/layout/BaseLayout/BaseLayout.module.css
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     background-color: var(--BG_DARK);
     width: 100%;
     max-width: 1000px;
