--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     min-height: 100vh;
     background-color: var(--BG_DARK);
