Add sort functionallity by author and date

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@
     --BG_LIGHT_X: #CCFFFF; 
     --FONT_COLOR_LIGHT: #CCFFFF;
     --FONT_COLOR_MEDIUM: #0079b6;
+    --FONT_COLOR_DARK: #000F1F;
     --BUTTON_COLOR_OK: #003c5a;
     --BORDER_COLOR_LIGHT: #CCFFFF;
     --BORDER_COLOR_MEDIUM: #003c5a;
