--- a/src/features/Todo/components/About/About.module.css
+++ b/src/features/Todo/components/About/About.module.css
@@ -1,10 +1,58 @@
-.aboutSection {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.about-section-image-ctr {
+    display: grid;
+    flex-grow: 1;
+    grid-template-columns: 
+        [main-start] 1fr 
+        [content-start] 1fr 
+        [content-end] 1fr 
+        [main-end];
+    grid-template-rows: 
+        [main-start] minmax(100px, 80%)
+        [content-start] minmax(100px, 80%)
+        [content-end] minmax(100px, 80%) 
+        [main-end];
 }
 
-.about-status-list {
-    margin-left: 2rem;
-    color: black;
+.box1,
+.box2,
+.box3,
+.box4,
+.box5 {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+.box1 {
+    background-color: var(--BG_LIGHT);
+    grid-column-start: main-start;
+    grid-row-start: main-start;
+    grid-row-end: main-end;
+}
+
+.box2 {
+    background-color: var(--BG_LIGHT);
+    grid-column-start: content-end;
+    grid-row-start: main-start;
+    grid-row-end: content-end;
+}
+
+.box3 {
+    background-color: var(--BG_LIGHT);
+    grid-column-start: content-start;
+    grid-row-start: main-start;
+}
+
+.box4 {
+    background-color: var(--BG_LIGHT);
+    grid-column-start: content-start;
+    grid-column-end: main-end;
+    grid-row-start: content-end;
+}
+
+.box5 {
+    background-color: var(--BG_LIGHT);
+    grid-column-start: content-start;    
+    grid-row-start: content-start;
 }
