--- a/src/features/Todo/components/About/About.module.css
+++ b/src/features/Todo/components/About/About.module.css
@@ -56,3 +56,12 @@
     grid-column-start: content-start;    
     grid-row-start: content-start;
 }
+
+.large-image {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1000;
+}
