Creating a TodoSynchronization component.

--- a/src/components/Modals/ErrorModal/ErrorModal.module.css
+++ b/src/components/Modals/ErrorModal/ErrorModal.module.css
@@ -19,7 +19,7 @@
     height: 80%;
     width: 90%;
     border-radius: 1rem;
-    background-color: #a31818;
+    background-color: var(--BG_WARNING);
 }
 
 .modal-header {
