--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
     --BG_MEDIUM: #005F8F;
     --BG_LIGHT: #265973; 
     --BG_LIGHT_X: #CCFFFF; 
+    --BG_WARNING: #a31818;
     --FONT_COLOR_LIGHT: #CCFFFF;
     --FONT_COLOR_MEDIUM: #0079b6;
     --FONT_COLOR_DARK: #000F1F;
